--- a/src/pages/react/react-page.css
+++ b/src/pages/react/react-page.css
@@ -1,4 +1,4 @@
-.react{
+.react {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -6,5 +6,17 @@
 
 .hidden {
     display: none;
-  }
+}
   
+.question-intro {
+    display: flex;
+    flex-direction: column;
+    width: 800px;
+    height: 200px;
+    border: 1px solid gray;
+}
+
+
+.question-intro.hidden {
+    border: none;
+}
