--- a/src/pages/react/react-page.css
+++ b/src/pages/react/react-page.css
@@ -2,17 +2,151 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: rgb(237, 240, 245);
 }
 
 .hidden {
     display: none;
 }
   
-/* .question-intro {
+/* react-page.css */
+
+.question-intro {
     display: flex;
     flex-direction: column;
-    width: 800px;
-    height: 200px;
-    border: 1px solid gray;
-} */
+    align-items: center;
+    margin-top: 50px;
+    
+  }
+  
+  .question {
+    background-color: white;
+    width: 900px;
+ 
+    border-radius: 15px;
+    padding: 20px;
+    margin-bottom: 20px;
+    transition: transform 0.2s ease-in-out;
+  }
+  
+  .question:hover {
+    transform: translateY(-5px);
+  }
+  
+  .question h2 {
+    font-size: 20px;
+    margin-bottom: 10px;
+  }
+  
+  .question p {
+    font-size: 16px;
+    color: #555;
+  }
+  .icon{
+    display: flex;
+    flex-direction: row;
+  }
+  
+  .answer{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
+  .answer-speech{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 16px;
+    color: #fbfcfd;
+    padding: 15px;
+    background-color: #007bff;
+    border:1px solid #007bff;
+    gap: 10px;
+    border-radius: 5px;
+    margin: 0 5px;
+    cursor: pointer;
+  }
+  .answer-speech:hover {
+    box-shadow: 
+        0 0 4px rgb(162, 226, 249),
+        0 0 4px rgb(94, 201, 248),
+        0 0 4px rgb(116, 201, 245),
+        0 0 4px rgb(133, 206, 246),
+        0 0 4px rgb(165, 203, 247),
+        0 0 4px rgb(134, 187, 236),
+        0 0 4px rgb(142, 184, 233),
+        0 0 4px rgb(158, 186, 233),
+        0 0 4px rgb(181, 184, 233),
+        0 0 4px rgb(208, 190, 233),
+        0 0 4px rgb(229, 194, 228),
+        0 0 4px rgb(232, 161, 211);
+}
 
+
+  .pagination {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+  
+  }
+  
+  .pagination-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+    color: #007bff;
+    padding: 10px;
+    border: 1px solid #007bff ;
+    border-radius: 5px;
+    margin: 0 5px;
+    cursor: pointer;
+  }
+
+  .pagination-icon:hover{
+    background-color: #c4defa;
+  }
+  
+  .pagination-icon.disabled {
+    color: #ccc;
+    cursor: not-allowed;
+  }
+
+  .status{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .status-text{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+    padding: 3px;
+    border-radius: 5px;
+    
+  }
+
+  .answer-container {
+    margin-top: 20px;
+    padding: 10px;
+    border: 1px solid #cccccc;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+  }
+  
+  .answer-container p {
+    margin: 0;
+  }
+  
+  .answer-container p:last-child {
+    margin-top: 5px;
+  }
+  
+  
+
+
+  
